--- a/src/app/charts/charts.component.css
+++ b/src/app/charts/charts.component.css
@@ -5,3 +5,60 @@
     .charhide{
         height: 0px;
     }
+    .floating-tooltip-2 {
+        width: 156px;
+        height: 80px;
+        position: absolute;
+        display: none;
+        padding: 8px;
+        box-sizing: border-box;
+        font-size: 12px;
+        color: #131722;
+        background-color: rgba(255, 255, 255, 0.7);
+        text-align: left;
+        z-index: 1000;
+        /* top: 12px;
+        left: 12px; */
+        pointer-events: none;
+        border: 1px solid rgba(250, 177, 131, 1);
+        border-radius: 2px;
+     
+    } 
+    .floating-tooltip-3 {
+        width: 156px;
+        height: 80px;
+        position: absolute;
+        display: none;
+        padding: 8px;
+        box-sizing: border-box;
+        font-size: 12px;
+        color: #131722;
+        background-color: rgba(255, 255, 255, 0.7);
+        text-align: left;
+        z-index: 1000;
+        /* top: 12px;
+        left: 12px; */
+        pointer-events: none;
+        border: 1px solid  rgba(131, 84, 0, 1);
+        border-radius: 2px;
+     
+    }
+    .floating-tooltip-4 {
+        width: 156px;
+        height: 80px;
+        position: absolute;
+        display: none;
+        padding: 8px;
+        box-sizing: border-box;
+        font-size: 12px;
+        color: #131722;
+        background-color: rgba(255, 255, 255, 0.7);
+        text-align: left;
+        z-index: 1000;
+        /* top: 12px;
+        left: 12px; */
+        pointer-events: none;
+        border: 1px solid  rgba(0, 32, 135, 1);
+        border-radius: 2px;
+     
+    }
