--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -5,19 +5,33 @@
         <p style="text-align: center;margin-top: 10px;font-style:oblique;font-weight: bold;"> Loading Your Chart...Please Wait</p>
        </div>
     <div class="col-md-12">
-        <div #chartdiv   style="width:100%;height:250px;background-color: white;">
+    <div class="mt-3 mb-3" *ngIf="loading==false">
+      <!-- <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;" (click)="resetbtc()">Reset</button><button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="mindata()">1Min</button>!-->
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="sevendaydata()">7D</button>       
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="thirtydata()">30D</button> 
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="threemonthdaydata()">3MO</button> 
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="sixmonthdaydata()">6MO</button> 
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="maxdata()">Max</button>
+      </div>
+      <h6 style="display: inline;color: black;">{{"Bitcoin(BTC) Last Pirce: "+btc+"  "}}</h6>
+        <div #chartdiv  class="mt-2"  style="width:100%;height:250px;background-color: white;position: relative;" >
+          <div #toolTip class="floating-tooltip-2"></div>
         </div>
       </div>
       <div class="col-md-12" >
-        <div #chartdiv0   style="width:100%;height:250px;background-color: white;">
+        <h6 style="display: inline;color: black;">{{"Ethereum(ETH) Last Pirce: "+eth+"  "}}</h6>
+        <div #chartdiv0   style="width:100%;height:250px;background-color: white;position: relative;">
+          <div #toolTip0 class="floating-tooltip-3"></div>
         </div>
       </div>
       <div class="col-md-12" >
-        <div #chartdiv1   style="width:100%;height:250px;background-color: white;">
+        <h6 style="display: inline;color: black;">{{"Ripple(XRP) Last Pirce: "+xrp+"  "}}</h6>
+        <div #chartdiv1   style="width:100%;height:250px;background-color: white;position: relative;">
+          <div #toolTip1 class="floating-tooltip-4"></div>
         </div>
       </div>
       <div class="col-md-12 mt-3 mb-3" >
-     <mat-card>
+     <!-- <mat-card>
         <div style="background-color: white;padding: 10px;">
             <h1 style="color: black;">Data will be refreshed Every {{timeinterval/60000}} min</h1>
            <div style="display: flex;flex: 1;">
@@ -31,11 +45,11 @@
            </div>
            <div style="display: flex;flex: 1;">
           
-            <h3 style="display: inline;color: black;">{{"Ripple(XRP) Last Pirce: "+xrp+"  "}}</h3>
+        
            </div>
           
           </div>
-     </mat-card>
+     </mat-card> -->
       </div>
 </div>
 </div>
