--- a/src/app/multicahrt/multicahrt.component.html
+++ b/src/app/multicahrt/multicahrt.component.html
@@ -4,10 +4,37 @@
     <div *ngIf="loading" style="text-align: center;margin: auto;width: 100%;background-color: white;">
         <p style="text-align: center;margin-top: 10px;font-style:oblique;font-weight: bold;"> Loading Your Chart...Please Wait</p>
        </div>
-    <div class="col-md-12" style="height: 100%;">
-        <div #chartdiv   style="width:100%;height:100%;background-color: white;">
+    <div class="col-md-12">
+    <div class="mt-3 mb-3" *ngIf="loading==false">
+      <!-- <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;" (click)="resetbtc()">Reset</button><button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="mindata()">1Min</button>!-->
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="sevendaydata()">7D</button>       
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="thirtydata()">30D</button> 
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="threemonthdaydata()">3MO</button> 
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="sixmonthdaydata()">6MO</button> 
+        <button class="btn btn-sm " style="border: 1px solid black;background-color: transparent;color: black;margin-left: 10px;" (click)="maxdata()">Max</button>
+      </div>
+      <!-- <h6 style="display: inline;color: black;">{{"Bitcoin(BTC) Last Pirce: "+btc+"  "}}</h6> -->
+        <div #chartdiv  class="mt-2"  style="width:100%;height:550px;background-color: white;position: relative;" >
+          <div #toolTip class="floating-tooltip-2"></div>
+          <div #toolTip0 class="floating-tooltip-3"></div>
+          <div #toolTip1 class="floating-tooltip-4"></div>
+          <div #toolTip2 class="floating-tooltip-5"></div>
+          <div #toolTip3 class="floating-tooltip-6"></div>
         </div>
       </div>
+      <!-- <div class="col-md-12" >
+        <h6 style="display: inline;color: black;">{{"Ethereum(ETH) Last Pirce: "+eth+"  "}}</h6>
+        <div #chartdiv0   style="width:100%;height:250px;background-color: white;position: relative;">
+          <div #toolTip0 class="floating-tooltip-3"></div>
+        </div>
+      </div>
+      <div class="col-md-12" >
+        <h6 style="display: inline;color: black;">{{"Ripple(XRP) Last Pirce: "+xrp+"  "}}</h6>
+        <div #chartdiv1   style="width:100%;height:250px;background-color: white;position: relative;">
+          <div #toolTip1 class="floating-tooltip-4"></div>
+        </div>
+      </div> -->
+      <!-- <iframe width="677" height="381" src="https://www.youtube.com/embed/38IEolI8f-w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 </div>
 </div>
 </div>
